--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "GOOGLE_API_KEY=AIzaSyCnTRM0ajhl7UgPuOwSCoId_gF84yzGNm0 DARK_SKY_API_KEY=19096b6e4c1caaa925d6e082ca534dcd nodemon ./bin/www",
+    "devserver": "node ./bin/www"
+  },
+  "engines": {
+    "node": "11.x"
   },
   "dependencies": {
     "axios": "^0.19.2",
